# synqueen

./: .gitignore  README.md  synqueen.code-workspace
service/: CMakeLists.txt  CMakePresets.json  vcpkg.json
service/cmake/: DetectPlatform.cmake
service/corelib/: CMakeLists.txt
service/corelib/include/: corelib.hpp
service/corelib/src/: basewatcher.hpp  corelib.cpp  iclouduploader.hpp  precompiled.hpp  settings.hpp  synchronizer.hpp
service/windows/: logger.cpp
